# safecare

./: .dockerignore  .gitignore  Dockerfile  clean_pycache.bat  create_superuser.py  entrypoint.sh  manage.py  mkdocs.yml  model1.html  model2.html  pyproject.toml
accounts/: admin.py  create_superuser.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py
accounts/tests/: test_commands.py  tests.py
classifications/: admin.py  apps.py  forms.py  models.py
classifications/migrations/: 0001_initial.py  0002_alter_damageclassification_options_and_more.py
classifications/tests/: test_models.py
core/: settings.py  urls.py
core/templates/: base.html  home.html
css/: main.css
departments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
departments/migrations/: 0001_initial.py  0002_alter_department_name.py
departments/tests/: test_models.py  test_views.py
docs/: index.md  models.md
events/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
events/forms/: __init__.py  event_ocurrence_forms.py  event_patient_forms.py  response_ocurrence_forms.py
events/migrations/: 0001_initial.py  0002_eventocurrence_patient.py  0003_alter_eventpatient_attendance_and_more.py  0004_metas_responseocurrence_and_more.py  0005_ocurrencedescription_and_more.py  0006_alter_ocurrencedescription_options_and_more.py  0007_genere_eventpatient_genere_race_eventpatient_race_and_more.py  (+3 more)
events/models/: __init__.py  (+10 more)
investigations/: urls.py  views.py
manager_responses/: apps.py  common.py  forms.py  models.py  urls.py  views.py
responses/: admin.py  apps.py  forms.py  urls.py  views.py
utils/: manager.py  mixins.py  regex.py  test.py  validators.py
(+76 files in other folders)
