[tool.poetry]
name = "safecare"
version = "0.1.0"
description = "Projeto para recebimento e gerenciamento de notificações e eventos, relacionados a segurança e qualidade do paciente hospitalar."
authors = ["matheus <matheuskdev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/matheusbraga/safecare"
keywords = ["django", "hospital", "eventos", "notificações", "segurança", "qualidade", "safecare"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
pillow = "^10.4.0"
python-decouple = "^3.8"
django-environ = "^0.10.0"

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.13.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
coverage = "^7.3.1"
pytest-django = "^4.9.0"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.39"
mkdocstrings = "^0.26.1"
mkdocstrings-python = "^1.11.1"
mkdocs-coverage = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "${PYTHONPATH:=.}"
addopts = "--doctest-modules --maxfail=1 --disable-warnings"
DJANGO_SETTINGS_MODULE = "core.settings"

[tool.isort]
profile = "black"
line_length = 79
skip = ["core/*", "manage.py", "venv"]

[tool.blue]
exclude = ["core/*", "manage.py", "venv"]

[tool.taskipy.tasks]
lint = "blue --check --diff .  && isort --check --diff ."
format = "blue .  && isort . "
docs = "mkdocs serve"
build-docs = "mkdocs build"
pre_test = "task lint"
test = "pytest -s -x --cov -vv"
post_test = "coverage html"
migra = "python manage.py makemigrations && python manage.py migrate"
